tests/errors/syntactic_error_2.fm
PASTA_RAIZ "/home/usuario/documentos"
REGRA SE $NOME EH "a.txt" E OU $EXTENSAO EH "pdf" ENTAO MOVER_PARA "/pasta" // E seguido imediatamente por OU
